# PKCS11-card-management

./: README.rst  pyproject.toml
.github/workflows/: build-pipeline.yml  release.yml  static-analysis.yml
card_management_tests/: softhsm_test.json  softhsm_test_file.json  test_file.py  test_first.py  test_key_and_cert.p12
pkcs11_card_management/: CSR_factory.py  certificate_data_factory.py  certificate_factory.py  openpgp_ZeitControl_card.json  prep_card.py  smart_card.py
